[gd_scene load_steps=3 format=3 uid="uid://b45qcyf6yspeh"]

[ext_resource type="Script" path="res://UI/Scripts/ButtonPoke.gd" id="1_ma2ru"]
[ext_resource type="Texture2D" uid="uid://db60w81j6iiko" path="res://icon.svg" id="1_reai4"]

[node name="ButtonPoke" type="TextureButton"]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("1_reai4")
script = ExtResource("1_ma2ru")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
